--- a/login:logout with redux /package.json
+++ b/login:logout with redux /package.json
@@ -51,7 +51,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
-    "antd-mobile": "^2.0.0-beta.6",
+    "antd-mobile": "^2.0.1-alpha.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4"
   },
   "scripts": {
